# windows-acl

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: index.html  search-index.js
docs/core/clone/: trait.Clone.js
docs/core/cmp/: trait.PartialEq.js
docs/core/convert/: trait.From.js
docs/core/fmt/: trait.Debug.js  trait.Display.js
docs/core/marker/: trait.Copy.js
docs/implementors/core/ops/drop/: trait.Drop.js
docs/src/windows_acl/: acl.rs.html  lib.rs.html  utils.rs.html
docs/windows_acl/: index.html  sidebar-items.js
docs/windows_acl/acl/: ACLEntry.t.html  AceType.t.html  enum.AceType.html  enum.ObjectType.html  index.html  sidebar-items.js  struct.ACL.html  struct.ACLEntry.html
docs/windows_acl/helper/: current_user.v.html  fn.current_user.html  fn.name_to_sid.html  fn.sid_to_string.html  fn.string_to_sid.html  index.html  sidebar-items.js
docs/windows_acl/utils/: fn.current_user.html  fn.name_to_sid.html  fn.sid_to_string.html  fn.string_to_sid.html  name_to_sid.v.html  sid_to_string.v.html  string_to_sid.v.html
example/: Cargo.toml  query_acl.rs
src/: acl.rs  lib.rs  query_acl.rs  tests.rs  utils.rs
support/: generate_docs.ps1  setup_acl_test.ps1  setup_query_dacl_test.ps1  setup_query_sacl_test.ps1  setup_query_test.ps1
