[package]
name = "windows-acl"
version = "0.1.0"
authors = ["yying <andy@trailofbits.com>"]
description = "Rust crate to simplify Windows ACL operations"
documentation = "https://trailofbits.github.io/windows-acl"
homepage = "https://trailofbits.github.io/windows-acl"
repository = "https://github.com/trailofbits/windows-acl"
readme = "README.md"
keywords = ["windows", "acl", "security", "win32", "windows apis"]
categories = ["os", "os::windows-apis"]
license-file = "LICENSE"

[lib]
name = "windows_acl"
path = "src/lib.rs"

[dependencies]
field-offset = "0.1.1"
libc = "0.2.40"
widestring = "0.3.0"

[dependencies.winapi]
git = "https://github.com/yying/winapi-rs"
branch = "features/procthreadattrs"
features = ["aclapi", "errhandlingapi", "handleapi", "sddl", "securitybaseapi", "winbase", "winerror"]