[package]
name = "windows-acl"
version = "0.2.2-rc.2"
authors = ["William Woodruff <william@trailofbits.com>", "yying <contact@trailofbits.com>"]
description = "Rust crate to simplify Windows ACL operations"
documentation = "https://trailofbits.github.io/windows-acl"
homepage = "https://trailofbits.github.io/windows-acl"
repository = "https://github.com/trailofbits/windows-acl"
readme = "README.md"
keywords = ["windows", "acl", "security", "win32"]
categories = ["os", "os::windows-apis"]
license = "MIT"

[package.metadata.release]
no-dev-version = true
disable-publish = true # handled by GitHub Actions

[lib]
name = "windows_acl"
path = "src/lib.rs"

[dependencies]
field-offset = "0.3.0"
libc = "0.2.40"
widestring = "0.4.0"

[dependencies.winapi]
version = "0.3.5"
features = ["aclapi", "errhandlingapi", "handleapi", "sddl", "securitybaseapi", "winbase", "winerror"]
